# test_video

./: .clang-format  CMakeLists.txt  compile_build  compile_rebuild  compile_run  error_handling.txt
.cache/clangd/index/: context.c.E5F09E37855A572B.idx  egl_context.c.F5224721122986C0.idx  glad.c.B5B117EC1474F5BF.idx  glad.h.BCDCC9A8673991CF.idx  glfw3.h.DA1AED85A35D4F1D.idx  glfw3native.h.512BEBBC946768FB.idx  glx_context.c.93A7F27DA02270AA.idx  init.c.F89AE0EB2BF2AAEA.idx  input.c.3A5730A5E25237C5.idx  internal.h.9408289522F0FDC8.idx  khrplatform.h.DA3FB7C3F7997748.idx  linux_joystick.c.8CBF8DC2D4163A30.idx  linux_joystick.h.767FC25A63FE5041.idx  main.cpp.4359721D8F93684F.idx  mappings.h.EFB31ADFCCB981FB.idx  monitor.c.6522D3536CD9CFBE.idx  null_init.c.F4761C7D5C669AC9.idx  null_joystick.c.E4AEA1013B5138E2.idx  null_joystick.h.5B14DFFAE5D98733.idx  null_monitor.c.129C2BD893049988.idx  null_platform.h.9C49E67121A0F33B.idx  null_window.c.288132BC89C55D5F.idx  osmesa_context.c.E38ECFCBA22B571A.idx  platform.c.8373BE61D6DC8156.idx  platform.h.D91B207A0BCE3B10.idx  posix_module.c.D94CACF500826F41.idx  posix_poll.c.2F824061B87D295B.idx  posix_poll.h.643D4D10B0F3D065.idx  posix_thread.c.867A25DF6A5C4C79.idx  (+11 more)
inc/KHR/: khrplatform.h
inc/glad/: glad.h
res/shaders/: basic.shader
scripts/: dependencies.cmake
src/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  glad.c  main.cpp  renderer.cpp  renderer.h
